Updated AI Info section and added new Deep Learning background image

--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="pages/ai-intro.html">AI Intro</a>
-            <a href="pages/ml-overview.html">Machine Learning</a>
-            <a href="pages/algorithms.html">Algorithms</a>
+            <div class="dropdown">
+                <a href="pages/ml-overview.html">Machine Learning</a>
+                <div class="dropdown-content">
+                    <a href="pages/deep-learning.html">Deep Learning</a>
+                </div>
+            </div>
+            <a href="pages/algorithms.html">ML Algorithms</a>
         </div>
     </nav>
 
@@ -39,6 +44,8 @@
         </div>
         <div class="section-title">INTELLIGENCE</div>
     </header>
+
+
 
     <script src="js/script.js"></script>
 </body>
