--- a/pages/ai-intro.html
+++ b/pages/ai-intro.html
@@ -17,8 +17,13 @@
         <div class="nav-links">
             <a href="../index.html">Home</a>
             <a href="ai-intro.html" class="active">AI Intro</a>
-            <a href="ml-overview.html">Machine Learning</a>
-            <a href="algorithms.html">Algorithms</a>
+            <div class="dropdown">
+                <a href="ml-overview.html">Machine Learning</a>
+                <div class="dropdown-content">
+                    <a href="deep-learning.html">Deep Learning</a>
+                </div>
+            </div>
+            <a href="algorithms.html">ML Algorithms</a>
         </div>
     </nav>
 
@@ -44,18 +49,20 @@
         </div>
 
         <div class="card">
-            <h2>History of AI</h2>
-            <p>The history of AI is a fascinating journey from ancient myths to modern reality:</p>
+            <h2>Types of AI</h2>
+            <p>Artificial Intelligence is often categorized by its capabilities and functionalities:</p>
             <ul style="margin-left: 20px; margin-top: 10px; color: var(--text-color);">
-                <li><strong>1950:</strong> Alan Turing proposes the "Turing Test" to determine if a machine can think.
-                </li>
-                <li><strong>1956:</strong> The term "Artificial Intelligence" is coined at the Dartmouth Conference.
-                </li>
-                <li><strong>1960s:</strong> ELIZA, an early natural language processing computer program, is created.
-                </li>
-                <li><strong>1997:</strong> IBM's Deep Blue beats world chess champion Garry Kasparov.</li>
-                <li><strong>2011:</strong> IBM Watson wins Jeopardy!.</li>
-                <li><strong>2020s:</strong> Generative AI models like GPT-4 revolutionize content creation.</li>
+                <li style="margin-bottom: 10px;"><strong>Narrow AI (ANI):</strong> Designed to perform specific tasks
+                    (e.g., facial recognition, voice assistants). All current AI, including the most advanced models,
+                    falls into this category.</li>
+                <li style="margin-bottom: 10px;"><strong>General AI (AGI):</strong> A theoretical form of AI with
+                    human-level cognitive abilities, capable of understanding, learning, and performing any intellectual
+                    task a human can.</li>
+                <li style="margin-bottom: 10px;"><strong>Super AI (ASI):</strong> A hypothetical future AI that
+                    surpasses human intelligence and capability across all domains.</li>
+                <li style="margin-bottom: 10px;"><strong>Generative AI:</strong> A powerful subset of AI focused on
+                    creating new, original content (text, images, audio, code) by learning patterns from existing data
+                    (e.g., ChatGPT, Midjourney).</li>
             </ul>
         </div>
 
