--- a/pages/ml-overview.html
+++ b/pages/ml-overview.html
@@ -17,8 +17,13 @@
         <div class="nav-links">
             <a href="../index.html">Home</a>
             <a href="ai-intro.html">AI Intro</a>
-            <a href="ml-overview.html" class="active">Machine Learning</a>
-            <a href="algorithms.html">Algorithms</a>
+            <div class="dropdown">
+                <a href="ml-overview.html" class="active">Machine Learning</a>
+                <div class="dropdown-content">
+                    <a href="deep-learning.html">Deep Learning</a>
+                </div>
+            </div>
+            <a href="algorithms.html">ML Algorithms</a>
         </div>
     </nav>
 
